--- a/bank-automat/keyboard.ui
+++ b/bank-automat/keyboard.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>PinUI</class>
- <widget class="QDialog" name="PinUI">
+ <class>Keyboard</class>
+ <widget class="QDialog" name="Keyboard">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -13,40 +13,11 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="loginButton">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>230</y>
-     <width>91</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Login</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit">
-   <property name="geometry">
-    <rect>
-     <x>140</x>
-     <y>50</y>
-     <width>113</width>
-     <height>24</height>
-    </rect>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QPushButton" name="btn1">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>100</y>
+     <x>10</x>
+     <y>70</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -58,8 +29,8 @@
   <widget class="QPushButton" name="btn2">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>100</y>
+     <x>140</x>
+     <y>70</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -71,8 +42,8 @@
   <widget class="QPushButton" name="btn3">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>100</y>
+     <x>270</x>
+     <y>70</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -84,8 +55,8 @@
   <widget class="QPushButton" name="btn4">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>130</y>
+     <x>10</x>
+     <y>110</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -97,8 +68,8 @@
   <widget class="QPushButton" name="btn5">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>130</y>
+     <x>140</x>
+     <y>110</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -110,8 +81,8 @@
   <widget class="QPushButton" name="btn6">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>130</y>
+     <x>270</x>
+     <y>110</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -123,8 +94,8 @@
   <widget class="QPushButton" name="btn7">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>160</y>
+     <x>10</x>
+     <y>150</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -136,8 +107,8 @@
   <widget class="QPushButton" name="btn8">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>160</y>
+     <x>140</x>
+     <y>150</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -149,8 +120,8 @@
   <widget class="QPushButton" name="btn9">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>160</y>
+     <x>270</x>
+     <y>150</y>
      <width>100</width>
      <height>32</height>
     </rect>
@@ -159,10 +130,36 @@
     <string>9</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="btnDelete">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>250</y>
+     <width>100</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>DELETE</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnEnter">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>250</y>
+     <width>100</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>ENTER</string>
+   </property>
+  </widget>
   <widget class="QPushButton" name="btn0">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>140</x>
      <y>190</y>
      <width>100</width>
      <height>32</height>
@@ -172,43 +169,30 @@
     <string>0</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnBackspace">
+  <widget class="QPushButton" name="btnExit">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>260</y>
+     <x>260</x>
+     <y>250</y>
      <width>100</width>
      <height>32</height>
     </rect>
    </property>
    <property name="text">
-    <string>Backspace</string>
+    <string>EXIT</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btnQuit">
+  <widget class="QLabel" name="txtEnteredNumber">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>260</y>
-     <width>100</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Quit</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>130</x>
-     <y>20</y>
+     <x>127</x>
+     <y>29</y>
      <width>131</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>Enter PIN:</string>
+    <string>Enter number</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
