--- a/bank-automat/transactions.ui
+++ b/bank-automat/transactions.ui
@@ -77,6 +77,9 @@
      <height>181</height>
     </rect>
    </property>
+   <attribute name="verticalHeaderVisible">
+    <bool>false</bool>
+   </attribute>
   </widget>
  </widget>
  <resources/>
