Info from logging response for user in PinUI

--- a/bank-automat/PinUI/pinui.ui
+++ b/bank-automat/PinUI/pinui.ui
@@ -19,7 +19,7 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QLabel" name="label">
+        <widget class="QLabel" name="infoLabel">
          <property name="text">
           <string>Enter PIN:</string>
          </property>
