debug ym pikkufixejä frontissa

--- a/bank-automat/balance.ui
+++ b/bank-automat/balance.ui
@@ -124,7 +124,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Available for withdraw</string>
+          <string>Available for withdrawal</string>
          </property>
         </widget>
        </item>
